scripts/tests/errors/err_func_unclosed_brace.bu
// BAD: function with unclosed { then a while loop after
def broken() {
    var x = 10;
    // missing }

while (true) {
    break;
}
print("should not reach here");
